--- a/design.ui
+++ b/design.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>708</width>
-    <height>466</height>
+    <width>783</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btnLoadExecFile">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>260</x>
       <y>30</y>
-      <width>221</width>
+      <width>231</width>
       <height>23</height>
      </rect>
     </property>
@@ -43,7 +43,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>20</x>
       <y>30</y>
       <width>41</width>
       <height>16</height>
@@ -56,7 +56,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>160</x>
       <y>10</y>
       <width>61</width>
       <height>16</height>
@@ -69,7 +69,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>260</x>
       <y>10</y>
       <width>101</width>
       <height>16</height>
@@ -79,13 +79,13 @@
      <string>Исполняемый файл:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="lblExecFile">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>360</x>
       <y>10</y>
-      <width>121</width>
-      <height>16</height>
+      <width>131</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -95,7 +95,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>10</y>
       <width>71</width>
       <height>16</height>
@@ -105,12 +105,12 @@
      <string>Входной тест:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLabel" name="lblInputTest">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>570</x>
       <y>10</y>
-      <width>141</width>
+      <width>121</width>
       <height>20</height>
      </rect>
     </property>
@@ -118,22 +118,22 @@
      <string/>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QTextEdit" name="nameMethod">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>160</x>
       <y>30</y>
-      <width>121</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="btnLoadInputTest">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>30</y>
-      <width>221</width>
+      <width>201</width>
       <height>23</height>
      </rect>
     </property>
@@ -141,7 +141,7 @@
      <string>Загрузить тест</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser">
+   <widget class="QTextBrowser" name="txtInputTest">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -151,17 +151,17 @@
      </rect>
     </property>
    </widget>
-   <widget class="QTableView" name="tableView">
+   <widget class="QTableView" name="tblRes">
     <property name="geometry">
      <rect>
       <x>280</x>
       <y>190</y>
-      <width>411</width>
+      <width>491</width>
       <height>221</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="btnNextMethod">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -174,7 +174,7 @@
      <string>Следующий метод:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="btnPrevMethod">
     <property name="geometry">
      <rect>
       <x>190</x>
@@ -187,12 +187,12 @@
      <string>Предыдущий метод:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="btnDelThisMethod">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>60</y>
-      <width>161</width>
+      <width>191</width>
       <height>23</height>
      </rect>
     </property>
@@ -200,12 +200,12 @@
      <string>Удалить текущий метод</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="btnDelAllMethod">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>80</y>
-      <width>161</width>
+      <width>191</width>
       <height>23</height>
      </rect>
     </property>
@@ -213,12 +213,12 @@
      <string>Удалить все методы</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_7">
+   <widget class="QPushButton" name="btnSaveThisMethod">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>560</x>
       <y>60</y>
-      <width>161</width>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -226,12 +226,12 @@
      <string>Сохранить этот метод</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="btnSaveAllMethod">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>560</x>
       <y>80</y>
-      <width>161</width>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -252,7 +252,7 @@
      <string>Метод:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_9">
+   <widget class="QLabel" name="lblNextMethod">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -278,7 +278,7 @@
      <string>Метод:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_11">
+   <widget class="QLabel" name="lblPrevMethod">
     <property name="geometry">
      <rect>
       <x>230</x>
@@ -304,7 +304,7 @@
      <string>Текущий метод:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_13">
+   <widget class="QLabel" name="lblThisMethod">
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -317,12 +317,12 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="btnCalcThisMethod">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>120</y>
-      <width>161</width>
+      <width>191</width>
       <height>23</height>
      </rect>
     </property>
@@ -330,12 +330,12 @@
      <string>Вычислить</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="btnSaveTest">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>560</x>
       <y>120</y>
-      <width>161</width>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -343,12 +343,12 @@
      <string>Сохранить тест</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="btnSaveResByte">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>560</x>
       <y>140</y>
-      <width>161</width>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -356,25 +356,25 @@
      <string>Сохранить результат в тест</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="btnCalcTo">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>140</y>
-      <width>91</width>
+      <width>131</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Вычислить до:</string>
+     <string>Вычислить до метода:</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox">
+   <widget class="QSpinBox" name="spnToMethod">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>490</x>
       <y>140</y>
-      <width>71</width>
+      <width>61</width>
       <height>22</height>
      </rect>
     </property>
@@ -408,10 +408,10 @@
      <string>Выходные данные:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QPushButton" name="btnExit">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>700</x>
       <y>420</y>
       <width>75</width>
       <height>23</height>
@@ -444,13 +444,73 @@
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>420</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сообщение:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblMsg">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>420</y>
+      <width>341</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnAddMethod">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>10</y>
+      <width>75</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Добавить 
+метод</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cmbMethods">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>30</y>
+      <width>91</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="txtRes">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>190</y>
+      <width>491</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>708</width>
+     <width>783</width>
      <height>21</height>
     </rect>
    </property>
