--- a/design.ui
+++ b/design.ui
@@ -256,7 +256,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>90</y>
+      <y>85</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -502,6 +502,19 @@
       <width>491</width>
       <height>221</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnLoadMethods">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>140</y>
+      <width>331</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Загрузить метод(ы)</string>
     </property>
    </widget>
   </widget>
