--- a/design.ui
+++ b/design.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>783</width>
-    <height>480</height>
+    <width>1021</width>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="btnLoadExecFile">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>30</y>
-      <width>231</width>
+      <x>800</x>
+      <y>90</y>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -30,7 +30,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>800</x>
       <y>10</y>
       <width>91</width>
       <height>16</height>
@@ -43,21 +43,21 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>800</x>
       <y>30</y>
       <width>41</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Метод:</string>
+     <string>Тип:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>10</y>
+      <x>800</x>
+      <y>50</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -69,8 +69,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>10</y>
+      <x>800</x>
+      <y>70</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -82,9 +82,9 @@
    <widget class="QLabel" name="lblExecFile">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>10</y>
-      <width>111</width>
+      <x>910</x>
+      <y>70</y>
+      <width>101</width>
       <height>16</height>
      </rect>
     </property>
@@ -95,8 +95,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>10</y>
+      <x>800</x>
+      <y>120</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -108,9 +108,9 @@
    <widget class="QLabel" name="lblInputTest">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>10</y>
-      <width>121</width>
+      <x>880</x>
+      <y>120</y>
+      <width>131</width>
       <height>16</height>
      </rect>
     </property>
@@ -121,9 +121,9 @@
    <widget class="QTextEdit" name="nameMethod">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>91</width>
+      <x>860</x>
+      <y>50</y>
+      <width>151</width>
       <height>21</height>
      </rect>
     </property>
@@ -131,9 +131,9 @@
    <widget class="QPushButton" name="btnLoadInputTest">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>30</y>
-      <width>201</width>
+      <x>800</x>
+      <y>140</y>
+      <width>211</width>
       <height>23</height>
      </rect>
     </property>
@@ -144,8 +144,8 @@
    <widget class="QTextBrowser" name="txtInputTest">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>190</y>
+      <x>10</x>
+      <y>110</y>
       <width>251</width>
       <height>221</height>
      </rect>
@@ -154,8 +154,8 @@
    <widget class="QTableView" name="tblRes">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>190</y>
+      <x>270</x>
+      <y>110</y>
       <width>491</width>
       <height>221</height>
      </rect>
@@ -164,8 +164,8 @@
    <widget class="QPushButton" name="btnNextMethod">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
+      <x>120</x>
+      <y>0</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -177,8 +177,8 @@
    <widget class="QPushButton" name="btnPrevMethod">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>60</y>
+      <x>300</x>
+      <y>0</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -190,10 +190,10 @@
    <widget class="QPushButton" name="btnDelThisMethod">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>60</y>
-      <width>191</width>
-      <height>23</height>
+      <x>620</x>
+      <y>30</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -203,10 +203,10 @@
    <widget class="QPushButton" name="btnDelAllMethod">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>80</y>
-      <width>191</width>
-      <height>23</height>
+      <x>620</x>
+      <y>0</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -216,10 +216,10 @@
    <widget class="QPushButton" name="btnSaveThisMethod">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>60</y>
-      <width>211</width>
-      <height>23</height>
+      <x>470</x>
+      <y>0</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -229,10 +229,10 @@
    <widget class="QPushButton" name="btnSaveAllMethod">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>80</y>
-      <width>211</width>
-      <height>23</height>
+      <x>470</x>
+      <y>30</y>
+      <width>141</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -242,8 +242,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>90</y>
+      <x>130</x>
+      <y>20</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -255,21 +255,21 @@
    <widget class="QLabel" name="lblNextMethod">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>85</y>
-      <width>121</width>
+      <x>170</x>
+      <y>20</y>
+      <width>101</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>NO</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>90</y>
+      <x>310</x>
+      <y>20</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -281,21 +281,21 @@
    <widget class="QLabel" name="lblPrevMethod">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>90</y>
-      <width>121</width>
+      <x>350</x>
+      <y>20</y>
+      <width>101</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>NO</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>120</y>
+      <x>10</x>
+      <y>0</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -307,21 +307,21 @@
    <widget class="QLabel" name="lblThisMethod">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>120</y>
-      <width>241</width>
+      <x>20</x>
+      <y>20</y>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>NO</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnCalcThisMethod">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>120</y>
+      <x>10</x>
+      <y>40</y>
       <width>191</width>
       <height>23</height>
      </rect>
@@ -333,8 +333,8 @@
    <widget class="QPushButton" name="btnSaveTest">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>120</y>
+      <x>250</x>
+      <y>40</y>
       <width>211</width>
       <height>23</height>
      </rect>
@@ -346,8 +346,8 @@
    <widget class="QPushButton" name="btnSaveResByte">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>140</y>
+      <x>250</x>
+      <y>60</y>
       <width>211</width>
       <height>23</height>
      </rect>
@@ -359,8 +359,8 @@
    <widget class="QPushButton" name="btnCalcTo">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>140</y>
+      <x>10</x>
+      <y>60</y>
       <width>131</width>
       <height>23</height>
      </rect>
@@ -372,8 +372,8 @@
    <widget class="QSpinBox" name="spnToMethod">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>140</y>
+      <x>140</x>
+      <y>60</y>
       <width>61</width>
       <height>22</height>
      </rect>
@@ -385,8 +385,8 @@
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>170</y>
+      <x>10</x>
+      <y>90</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -398,8 +398,8 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>170</y>
+      <x>270</x>
+      <y>90</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -411,8 +411,8 @@
    <widget class="QPushButton" name="btnExit">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>420</y>
+      <x>690</x>
+      <y>330</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -424,8 +424,8 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>420</y>
+      <x>10</x>
+      <y>330</y>
       <width>201</width>
       <height>21</height>
      </rect>
@@ -437,8 +437,8 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>420</y>
+      <x>200</x>
+      <y>330</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -447,8 +447,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>420</y>
+      <x>270</x>
+      <y>330</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -460,8 +460,8 @@
    <widget class="QLabel" name="lblMsg">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>420</y>
+      <x>340</x>
+      <y>330</y>
       <width>341</width>
       <height>16</height>
      </rect>
@@ -473,23 +473,22 @@
    <widget class="QPushButton" name="btnAddMethod">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>10</y>
-      <width>75</width>
-      <height>41</height>
+      <x>800</x>
+      <y>170</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Добавить 
-метод</string>
+     <string>Добавить метод</string>
     </property>
    </widget>
    <widget class="QComboBox" name="cmbMethods">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>860</x>
       <y>30</y>
-      <width>91</width>
+      <width>151</width>
       <height>22</height>
      </rect>
     </property>
@@ -497,8 +496,8 @@
    <widget class="QTextBrowser" name="txtRes">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>190</y>
+      <x>270</x>
+      <y>110</y>
       <width>491</width>
       <height>221</height>
      </rect>
@@ -507,10 +506,10 @@
    <widget class="QPushButton" name="btnLoadMethods">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>140</y>
-      <width>331</width>
-      <height>23</height>
+      <x>470</x>
+      <y>60</y>
+      <width>291</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -523,7 +522,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>783</width>
+     <width>1021</width>
      <height>21</height>
     </rect>
    </property>
