--- a/design.ui
+++ b/design.ui
@@ -95,8 +95,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>120</y>
+      <x>790</x>
+      <y>240</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -108,8 +108,8 @@
    <widget class="QLabel" name="lblInputTest">
     <property name="geometry">
      <rect>
-      <x>880</x>
-      <y>120</y>
+      <x>870</x>
+      <y>240</y>
       <width>131</width>
       <height>16</height>
      </rect>
@@ -131,8 +131,8 @@
    <widget class="QPushButton" name="btnLoadInputTest">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>140</y>
+      <x>790</x>
+      <y>260</y>
       <width>211</width>
       <height>23</height>
      </rect>
@@ -453,8 +453,8 @@
    <widget class="QPushButton" name="btnAddMethod">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>170</y>
+      <x>790</x>
+      <y>290</y>
       <width>211</width>
       <height>31</height>
      </rect>
@@ -504,6 +504,19 @@
       <width>491</width>
       <height>221</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnLoadResFile">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>210</y>
+      <width>211</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Загрузить результирующий файл</string>
     </property>
    </widget>
   </widget>
