--- a/design.ui
+++ b/design.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1021</width>
-    <height>396</height>
+    <width>1074</width>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="btnLoadExecFile">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>90</y>
-      <width>211</width>
+      <x>790</x>
+      <y>230</y>
+      <width>271</width>
       <height>23</height>
      </rect>
     </property>
@@ -69,8 +69,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>70</y>
+      <x>790</x>
+      <y>210</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QLabel" name="lblExecFile">
     <property name="geometry">
      <rect>
-      <x>910</x>
-      <y>70</y>
+      <x>900</x>
+      <y>210</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>240</y>
+      <y>310</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -109,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>240</y>
+      <y>310</y>
       <width>131</width>
       <height>16</height>
      </rect>
@@ -123,7 +123,7 @@
      <rect>
       <x>860</x>
       <y>50</y>
-      <width>151</width>
+      <width>201</width>
       <height>21</height>
      </rect>
     </property>
@@ -132,8 +132,8 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>260</y>
-      <width>211</width>
+      <y>330</y>
+      <width>271</width>
       <height>23</height>
      </rect>
     </property>
@@ -453,9 +453,9 @@
    <widget class="QPushButton" name="btnAddMethod">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>290</y>
-      <width>211</width>
+      <x>780</x>
+      <y>160</y>
+      <width>281</width>
       <height>31</height>
      </rect>
     </property>
@@ -468,7 +468,7 @@
      <rect>
       <x>860</x>
       <y>30</y>
-      <width>151</width>
+      <width>201</width>
       <height>22</height>
      </rect>
     </property>
@@ -510,13 +510,143 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>210</y>
-      <width>211</width>
+      <y>280</y>
+      <width>271</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Загрузить результирующий файл</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>260</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Фул с результатом:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblResFile">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>260</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spnCountThread">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>90</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>999999999</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spnTimeWait">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>110</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>999999999</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spnSleepWork">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>90</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>999999999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>70</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Кол-во потоков:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>110</y>
+      <width>211</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Максимальное время ожидания потока:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>70</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ожидание после запуска:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spnCountRow">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>130</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>999999999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>130</y>
+      <width>131</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Кол-во строк проверки:</string>
     </property>
    </widget>
   </widget>
@@ -525,7 +655,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1021</width>
+     <width>1074</width>
      <height>21</height>
     </rect>
    </property>
