--- a/design.ui
+++ b/design.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1074</width>
-    <height>393</height>
+    <height>487</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -453,9 +453,9 @@
    <widget class="QPushButton" name="btnAddMethod">
     <property name="geometry">
      <rect>
-      <x>780</x>
+      <x>790</x>
       <y>160</y>
-      <width>281</width>
+      <width>271</width>
       <height>31</height>
      </rect>
     </property>
@@ -623,12 +623,12 @@
      <string>Ожидание после запуска:</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spnCountRow">
+   <widget class="QSpinBox" name="spnCountRowEnd">
     <property name="geometry">
      <rect>
-      <x>1000</x>
+      <x>1020</x>
       <y>130</y>
-      <width>61</width>
+      <width>41</width>
       <height>22</height>
      </rect>
     </property>
@@ -639,14 +639,53 @@
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>860</x>
+      <x>790</x>
       <y>130</y>
+      <width>171</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Строки проверки(без последней) &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spnCountRowStart">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>130</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>999999999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>130</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>   -</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblResFile_2">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>260</y>
       <width>131</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Кол-во строк проверки:</string>
+     <string/>
     </property>
    </widget>
   </widget>
