--- a/design.ui
+++ b/design.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1074</width>
-    <height>487</height>
+    <height>631</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -681,6 +681,106 @@
       <x>900</x>
       <y>260</y>
       <width>131</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="tblChgTest">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>360</y>
+      <width>501</width>
+      <height>221</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>Адрес байта</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Содержимое</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Готово</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Убрать</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Поиск по адресу</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPushButton" name="btnAddStrEditTest">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>360</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Добавить</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="prgExec">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>380</y>
+      <width>451</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>380</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Применить все</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>360</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Выполнение:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblExecuteProc">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>360</y>
+      <width>371</width>
       <height>16</height>
      </rect>
     </property>
