--- a/design.ui
+++ b/design.ui
@@ -84,7 +84,7 @@
      <rect>
       <x>900</x>
       <y>210</y>
-      <width>101</width>
+      <width>161</width>
       <height>16</height>
      </rect>
     </property>
@@ -110,7 +110,7 @@
      <rect>
       <x>870</x>
       <y>310</y>
-      <width>131</width>
+      <width>191</width>
       <height>16</height>
      </rect>
     </property>
@@ -524,12 +524,12 @@
      <rect>
       <x>790</x>
       <y>260</y>
-      <width>101</width>
+      <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Фул с результатом:</string>
+     <string>Файл с результатом:</string>
     </property>
    </widget>
    <widget class="QLabel" name="lblResFile">
@@ -640,13 +640,13 @@
     <property name="geometry">
      <rect>
       <x>790</x>
-      <y>130</y>
+      <y>135</y>
       <width>171</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Строки проверки(без последней) &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Байты проверки (с последним)&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="spnCountRowStart">
@@ -680,7 +680,7 @@
      <rect>
       <x>900</x>
       <y>260</y>
-      <width>131</width>
+      <width>161</width>
       <height>16</height>
      </rect>
     </property>
@@ -749,7 +749,7 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="btnChgAll">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -786,6 +786,71 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnOpenInputData">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>90</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Развернуть</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnOpenResData">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>90</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Развернуть</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>190</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Добавить Файлы:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnClearChgAll">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>400</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Убрать все</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnFindChgAll">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>420</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Найти все</string>
     </property>
    </widget>
   </widget>
